SCMOD-3477: Update with CRUD operations for global configs (#36)
* SCMOD-3477: Update with CRUD operations for global configs

* SCMOD-3477: Updates

* SCMOD-3477: Update

* SCMOD-3477: Update

* SCMOD-3477: Update

* SCMOD-3477: Updates

* SCMOD-3477: Added postman exemple requests for global configuration

Only added new requests no changes to other ones here.

* SCMOD-3477: Updated readme to point to documentation
